# oberonc

./: .clang-format  .gitignore  ArrayTypeSymbol.cpp  ArrayTypeSymbol.h  ArrayTypeSymbol.hpp  CLAUDE.md  CMakeLists.txt  CstVisitor.cpp  CstVisitor.hpp  ErrorReporter.cpp  ErrorReporter.hpp  Expr.hpp  FunctionSymbol.cpp  FunctionSymbol.hpp  LogReporter.cpp  LogReporter.h  Oberon.g4  OberonLexer.g4  OberonParser.cpp  OberonParser.hpp  PointerTypeSymbol.cpp  PointerTypeSymbol.hpp  ProcedureTypeSymbol.hpp  README.md  Symbol.cpp  Symbol.hpp  SymbolTable.cpp  SymbolTable.hpp  SymbolType.hpp  Token.cpp  Token.hpp  TokenType.cpp  TokenType.hpp  Tokenizer.cpp  Tokenizer.hpp  build_kernel.sh  comment_expr_ast.cpp  comment_expr_ast.h  double_expr_ast.cpp  double_expr_ast.h  (+21 more)
example-programs/: MyMath.mod  conditionals.mod  hello-no-function.mod  hello-world.mod  hello.mod
project-oberon/: DisplayDemo.Mod  KernelDemo.Mod
runtime/: oberon_runtime.cpp  oberon_runtime_bare.cpp
runtime/boot/aarch64/: boot.S  kernel.ld
runtime/boot/x86_64/: boot.S  kernel.ld
runtime/platform/: hal.hpp
runtime/platform/aarch64/: hal.cpp
runtime/platform/x86_64/: hal.cpp
src/: ast.hpp  codegen.cpp  codegen.hpp  codegen_gen.cpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  sema.hpp  token.hpp
tests/: Features.Mod  Hello.Mod  MathExample.Mod  MyMath.Mod  SysTest.Mod  TypeExporter.Mod  test_codegen.cpp  test_lexer.cpp  test_parser.cpp
